--- a/GreenCharger/src/index.html
+++ b/GreenCharger/src/index.html
@@ -5,7 +5,7 @@
   <title>GreenCharger</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/ddkvhnj27/image/upload/v1758400063/z7019344847597_aa447955326b74efcd30844f0ddafb97_mcbqgu.jpg">
 </head>
 <body>
   <app-root></app-root>
